statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: storage-demo
spec:
  serviceName: storage-demo
  replicas: 3

  selector:
    matchLabels:
      app: storage-demo

  template:
    metadata:
      labels:
        app: storage-demo

    spec:
      containers:
        - name: app
          image: busybox
          command: ["sh", "-c", "sleep 3600"]

          volumeMounts:
            - name: data
              mountPath: /data

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce

        storageClassName: standard

        resources:
          requests:
            storage: 1Gi
