service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: development

spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: metrics
      port: 8000
      targetPort: 8000
